--- a/udemy/web-server/templates/views/help.hbs
+++ b/udemy/web-server/templates/views/help.hbs
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/app.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Help</title>
 </head>
 <body>
-    <h1>{{title}}</h1>
-    <h1>Created by {{name}}</h1>
-    <img src="./img/Distortion.png" style="width: 300px;" alt="" srcset="">
+    <div class="main-content">
+    {{>header}}
+    <p>{{message}}</p>
+    </div>
+    {{>footer}}
 </body>
 </html>
