--- a/udemy/web-server/templates/views/index.hbs
+++ b/udemy/web-server/templates/views/index.hbs
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="./css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Index</title>
 </head>
 <body>
     <div class="main-content">
         {{>header}}
         <p>Use this site to get weather information!</p>
+        <form action="">
+            <input placeholder="Type a place" type="text">
+            <button>Search</button>
+        </form>
+
+        <p id="forecast"></p>
+        <p id="address"></p>
+        <p id="location"></p>
+
     </div>
     {{>footer}}
+    <script src="/js/app.js"></script>
 </body>
 </html> 
