--- a/udemy/web-server/templates/views/index.hbs
+++ b/udemy/web-server/templates/views/index.hbs
@@ -19,6 +19,7 @@
         <p id="address"></p>
         <p id="location"></p>
 
+        <p>This site was created by Erick Castañeda. It uses data from Mapbox.com and WeatherStack.com</p>
     </div>
     {{>footer}}
     <script src="/js/app.js"></script>
