--- a/webDevelopmentClub-ESCOM/homework/hw-2/views/navbar.pug
+++ b/webDevelopmentClub-ESCOM/homework/hw-2/views/navbar.pug
@@ -1,9 +1,2 @@
 nav.navbar.navbar-expand-lg.navbar-dark.bg-dark.fixed-top
-    a.navbar-brand(href="#") MyApp
-        button.navbar-toggler(
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation")
+    a.navbar-brand(href="#") #{title}
